# match3-sdl3

./: .clang-format  .gitignore  CMakeLists.txt  EnumMap.hh  Game.cc  Game.hh  Gem.hh  MatchData.hh  PlayField.cc  PlayField.hh  SDLwrap.hh  Xoshiro256ss.hh  main.cc  mdspan_ext.hh  qoi_texture.cc  qoi_texture.hh
.github/workflows/: cmake.yml
assets/: CMakeLists.txt
assets/sprites/gems/: Blue.aseprite  Blue.qoi  Green.aseprite  Green.qoi  Orange.aseprite  Orange.qoi  Purple.aseprite  Purple.qoi  Red.aseprite  Red.qoi  White.aseprite  White.qoi  Yellow.aseprite  Yellow.qoi
